# nexus-core

./: CONTRIBUTING.md  Cargo.toml  Modelfile.nexus  README.md  agents.md  hf_model_card.md  pyproject.toml
.ai/: requirements.md  routing.md
.github/workflows/: ci.yml  release.yml
src/: engine.rs  lib.rs  mcp.rs  memory.rs  paged_attention.rs  scheduler.rs  telemetry.rs  tui.rs  validation.rs
tests/: test_codata.py  test_engine_stress.py  test_ffi.py  test_mcp_security.py  test_paged_attention.py  test_scheduler.py  test_telemetry.py  test_validation.py  test_zero_copy.py
