[package]
name = "nexus_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexus_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
serde_json = "1"
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "tui_demo"
path = "src/bin/tui_demo.rs"
